0.5.0
- Change: Mod2: Move the icons to just after the event's title and date (#623)
- Change: Make the tables not have a fixed width (#621)
- Feature: In the mod2 lists, show the record icons (#606)
- Change: Disallow data records on non-sysfolder pages and only display the "create new record" link if the current page is a sysfolder (#654)
- Fix: Billing address not displayed on the second registration page (#836)
- Change: Use a drop-down list for the number of seats and the number of kids (#785)
- Change: Adapt to FORMidable 0.7.0 (#456)
- Feature: Add a hook to the single view (#793)
- Fix: Some BE icons have the wrong sizes (#721), patch by Simon Harhues
- Change: Change the German record type label "Veranstaltungsreihe: Datum" to "Veranstaltungsreihe: Termin" (#595), patch by Simon Harhues
- Change: Switch the registration form from the default form renderer to HTML templates (#474)
- Fix: Remove mod2/clear.gif (#642)
- Fix: Remove all static calls to t3lib_pageSelect::enableFields() (#764)
- Fix: Mod2: event list is displayed although the user is not allowed to access them (#637)
- Feature: Check for overlapping events on registration (#762)
- Feature: Add tx_seminars_place and tx_seminars_placebag classes (#767)
- Change: Put some of the date- and time methods into a separate class (#766)
- Change: Make more fields in the BE excludefields (#759, #810), second patch by Stefan Galinski
- Change: Add labels "telephone" and "E-mail address" on the second registration page and in the thank-you e-mail (#755)
- Change: Allow up to 9999 vacancies (#756)
- Change: When prefilling the country field, also use static_info_country from fe_users (#754)
- Change: Improve the list view formatting (#753)
- Feature: Remember the selected payment data (#750)
- Fix: Billing address and registration data are not displayed on the second step of the registration process (#752)
- Fix: TypoScript configuration doesn't exist in class.tx_seminars_tcemain.php (#733)