@@ -1,4 +1,5 @@
 0.5.0
+- Change: In the mod2 list of events, right-align the column with the numbers of attendees (current, min and max) and enough_attendees/is_full (#799)
 - Change: Mod2: Move the icons to just after the event's title and date (#623)
 - Change: Make the tables not have a fixed width (#621)
 - Feature: In the mod2 lists, show the record icons (#606)
